auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: demo-app
  labels:
    app: auth-service
  annotations:
    kubernetes.io/change-cause: "First deployment with tag latest"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        # image: pratikkumar54/auth-service:1.0.0
        image: pratikkumar54/auth-service:1.0.1
        ports:
        - containerPort: 3001
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /hello
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /hello
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 10
