pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: demo-app
  labels:
    app: nginx
spec:
  containers:
  - name: nginx-container
    image: "nginx:latest"
    resources:
      limits:
        cpu: 200m
        memory: 500Mi
      requests:
        cpu: 100m
        memory: 200Mi
    ports:
    - containerPort:  80
      name:  http
  restartPolicy: Always
