user-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: demo-app
  labels:
    app: user-service
  annotations:
    kubernetes.io/change-cause: "Update the tag to 1.0.2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: pratikkumar54/user-service:1.0.0
        # image: pratikkumar54/user-service:1.0.4
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "100m"
            memory: "156Mi"
        livenessProbe:
          httpGet:
            path: /hello
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /hello
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
