auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: demo-app
  labels:
    app: auth-service
spec:
  selector:
    app: auth-service
  ports:
  - port: 3001
    targetPort: 3001
  type: NodePort
