user-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: demo-app
  labels:
    app: user-service
spec:
  selector:
    app: user-service
  ports:
  - port: 3000
    targetPort: 3000
  type: NodePort
