ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fans-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
spec:
  rules:
    - host: prateek.com
      http:
        paths:
          - pathType: Prefix
            path: /user/(.*)
            backend:
              service:
                name: user-service
                port:
                  number: 3000
          - pathType: Prefix
            path: /auth/(.*)
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
